Add author setting

--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -23,11 +23,15 @@
     <input type="text" id="node-input-name" placeholder="Name">
   </div>
   <div class="form-row">
+    <label for="node-input-application"><i class="icon-tag"></i> WWS Application</label>
+    <input type="text" id="node-input-application" placeholder="WWS Application">
+  </div>
+  <div class="form-row">
     <label for="node-input-query"><i class="icon-tag"></i> GraphQL Query</label>
     <input type="text" id="node-input-query" placeholder="GraphQL Query">
   </div>
 </script>
 
-<script type="text/x-red" data-help-name="wws-message-post">
+<script type="text/x-red" data-help-name="wws-graphql">
   <p>A node that sends a GraphQL request to <a href="https://developer.watsonwork.ibm.com">IBM Watson Work Services</a>.</p>
 </script>
