Make space configuration optional

--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -5,7 +5,7 @@
     defaults: {
       name: { value: "" },
       application: { value: "", type: "wws-application" },
-      space: { value: "", required: true },
+      space: { value: "" },
       author: { value: "" }
     },
     inputs: 1,
