--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -8,12 +8,12 @@
       query: { value: "" }
     },
     inputs: 1,
-    outputs: 0,
+    outputs: 1,
     icon: "bridge.png",
     label: function() {
       return this.name || "WWS GraphQL";
     },
-    align: "right"
+    align: "center"
   });
 </script>
 
