BugFixing - Streamlining node names.

--- a/wws-file-post/wws-file-post.html
+++ b/wws-file-post/wws-file-post.html
@@ -20,7 +20,7 @@
       //Input Account
       var configNodeId = $("#node-input-application option:selected").val();
       $("#node-input-application").change(function(data,event) {
-          console.log("#nnode-input-application changed");
+          console.log("#node-input-application changed");
           configNodeId = $("#node-input-application").val();
           getSpaces(configNodeId);
       });
